nonmesh-access/k8s/03-serviceentry.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: httpbin-plain
  namespace: nonmesh-lab
spec:
  hosts:
    - httpbin.nonmesh-plain.svc.cluster.local
  location: MESH_INTERNAL
  ports:
    - number: 80
      name: http
      protocol: HTTP
  resolution: DNS
